# unicorn

./: Cargo.toml  ClientDockerfile  README.md  ServerDockerfile  docker-compose.yml
client/: Cargo.toml  build.rs
client/src/: main.rs  prelude.rs
corelib/: Cargo.toml
corelib/src/: lib.rs
proto/: unicorn.proto
server/: Cargo.toml
server/src/: main.rs  web.rs
server/static/: index.html  script.js  style.css
