[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
docker-api = "0.14.0"
futures-util = "0.3.30"
chrono = "0.4.38"
corelib = { version = "0.1", path = "../corelib" }
tonic = "0.11"
prost = "0.12"
env_logger = "0.11.3"
log = "0.4.21"

[build-dependencies]
tonic-build = "0.11"
